<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="288dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_web" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/app_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/james"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/name_james"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/desc_james"
                android:textAlignment="center"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/jared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/name_jared"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/desc_jared"
                android:textAlignment="center"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/store"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/action_rate" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/github"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/action_github" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>