<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_launcher_web" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/app_desc"
                        android:textAlignment="center"
                        android:textColor="?android:textColorSecondaryInverse"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_checks" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/name_picker"
                        android:textAlignment="center"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/desc_picker"
                        android:textAlignment="center"
                        android:textColor="?android:textColorSecondaryInverse"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="98dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_wallpaper" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/name_apply"
                        android:textAlignment="center"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/desc_apply"
                        android:textAlignment="center"
                        android:textColor="?android:textColorSecondaryInverse"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_start"
                android:textAllCaps="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/startFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:backgroundTint="?android:textColorPrimary"
                app:fabSize="mini" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>